<resources>
    <string name="app_name">Office Reader</string>
    <string name="word">Word</string>
    <string name="excel">Excel</string>
    <string name="ppt">PPT</string>
    <string name="pdf">PDF</string>
    <string name="ad_attribution">Ads</string>
    <string name="search_hint">Search</string>
    <string name="view_horizontal">View horizontal</string>
    <string name="view_vertical">View vertical</string>
    <string name="share_view">Send as attachment</string>
    <string name="update_app">Please use the application in the latest version to get a great experience from the application. \n\n Thank you very much!</string>
    <string name="no_file_found">No Files Found</string>
    <string name="no_file_hint">Search file new open now.</string>
    <string name="no_file_recent_hint">Open file to add recent view.</string>
    <string name="tutorial">You can swipe from left to right to view next page</string>
    <string name="could_not_open_file">Could not open file!</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="color">Color</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="plz_enter_content">Please enter the content to search</string>
    <string name="press_again">Press again to exit!</string>
    <string name="no_file_bookmark">No Files</string>
    <string name="no_file_bookmark_hint">Add new file to bookmark.</string>
    <string name="mn_open">Open</string>
    <string name="mn_share_file">Share file</string>
    <string name="toast_added_bookmark">Added file to bookmark!</string>
    <string name="toast_file_added">File added!</string>
    <string name="toast_removed_file">Removed file from bookmark!</string>
    <string name="file_reader_tab">Reader</string>
    <string name="recent_tab">Recent</string>
    <string name="book_mark_tab">Bookmark</string>
    <string name="file_manager_tab">Store</string>
    <string name="gift_tab">Gift</string>
    <string name="slide">Slide</string>
    <string name="todo">Todo</string>
    <string name="update_nav">New Update</string>
    <string name="version_navi">Version</string>
    <string name="feedback_navi">Feedback</string>
    <string name="share_app_navi">Share app</string>
    <string name="rate_app_navi">Rate app</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="choose_button_label">Open</string>
    <string name="default_dir" translatable="false">/sdcard</string>
    <string name="label_parent_directory">Parent Directory</string>
    <string name="last_edit">Edited: </string>
    <string name="error_dir_access">Directory cannot be accessed</string>
    <string name="label_parent_dir" translatable="false">...</string>
    <string name="reading_mode">Reading mode</string>
    <string name="this_last_version">This version is the latest version for you. Thank you for using the application.</string>
    <string name="rate_do_you_like_this_app">Do you like this App?</string>
    <string name="rate_content_rate_app">Please! Take a moment to rate 5 stars for Document. Thanks for your support!</string>
    <string name="rate_title">[Rate Dialog] All Document</string>
    <string name="rate_feedback">Please send feedback to us</string>
    <string name="rate_content_feedback">Let us better upgrade the functionality and experience for this application.</string>
    <string name="rate_feedback_hint">Suggest us what went wrong and we\'ll work on it</string>
    <string name="thank_share">Thank you for sharing your feedback</string>
    <string name="rate_content_sign">\n Version Code:</string>
    <string name="fill_feedback">Please write something</string>
    <string name="toast_rating">You have not yet rated us! Please press the star to evaluate title.</string>
    <string name="intro1_content">Dominate the software to read the office \n document file.</string>
    <string name="intro1_title">Enjoy reading \n all document file</string>
    <string name="intro2_title">Powerful reader \n application</string>
    <string name="intro2_content">The most powerful file reader application \n have ever used. \n Recommend to use by senior developer.</string>
    <string name="intro3_title">Free cool Reader</string>
    <string name="intro3_content">Sometimes images like the image above will appear in the app because it will give the community free apps.</string>
    <string name="intro3_permission">Get started</string>
    <string name="permisson_need_permission">Need permission</string>
    <string name="permisson_need_permission_message">You can turn on permission in setting</string>
    <string name="permisson_go_to_setting">Setting</string>
    <string name="permisson_cancel">Cancel</string>
    <string name="gift_remove_ads">Remove ads</string>
    <string name="gift_remove_ads_detail">Remove ads to have good experience</string>
    <string name="gift_install">Install</string>
    <string name="gift_full_ads_title">Watch ads</string>
    <string name="gift_watch_ads_detail">Click to watch video ads to support us improve apps</string>
    <string name="gift_rate">4.6</string>
    <string name="gift_count_install">100,000+</string>
    <string name="loading_ads">Loading ads</string>
    <string name="ads_title">Thank you for using the app! This video is to help you experience a better and free application for the community.</string>
    <string name="setting_nav">Setting</string>
    <string name="get_version_app">Version:</string>
    <string name="dialog_enable_internet">Enable Internet</string>
    <string name="dialog_message_internet">Please enable the internet for a better functional experience!</string>
    <string name="internet_cancel">Cancel</string>
    <string name="internet_try_again">Try again</string>
    <string name="tap_to_refresh">Tap to turn on internet</string>
    <string name="intro_next">Next</string>
    <string name="intro1_enjoy">Enjoy</string>
    <string name="intro_great">Great !</string>
    <string name="just_only">Just only one final step left</string>
    <string name="gift_full_ads">Full ads</string>
    <string name="gift_full_ads_detail">Click to see ads for better apps every day</string>
    <string name="gift_watch_ads_content">Watch ads to earn more your score</string>
    <string name="gift_watch_ads_title">Reward Points</string>
    <string name="dialog_suggest_bill_title">Try now</string>
    <string name="dialog_suggest_bill_content">Do you want to remove ads and experience smoother apps? Please! Use our service to contribute a portion of your developer spend to create many new experiences and function for yourself.</string>
    <string name="suggest_ok">OK</string>
    <string name="mn_short_cut">Create shortcut</string>
    <string name="tx_0">0</string>
    <string name="tab_gift_title">It\'s big honor for us to continue contributing free apps for interested users as long as you feel free to experience my apps.</string>
    <string name="loading_file">Loading file…</string>
    <string name="text_error_title">Oh, Snap!</string>
    <string name="text_error_content">So sorry! Please, feedback for better improvement. Thank you so much!</string>
    <string name="try_again">Try again</string>
    <string name="send_feedback">Send</string>
    <string name="content_fake_title">This app gives you a great experience when you can read all the files you desire. Please use it immediately.</string>
    <string name="rate_check_do_not_show">Don\'t show again</string>
    <string name="thank_you_dialog">Thank you for using our application. Hope the application makes you satisfied. Please join us to improve the quality and experience of the application. Thanks very much!</string>
    <string name="thank_you_dialog_title">Letter from developer</string>
    <string name="dear_user">Dear user</string>
    <string name="dialog_enable_new_update">Upgrade now !</string>
    <string name="last_update">You are using the latest version. Thank you!</string>
    <string name="donate_title">Give us a gift to motivate us to develop a free app for the community!</string>
    <string name="donate_content">We will remove all ads while you use the app.</string>
    <string name="donate_button">Donate</string>
    <string name="donate_price_hotdog">0.99 $</string>
    <string name="donate_name_hotdog">Hot dog</string>
    <string name="donate_name_bread">Bread</string>
    <string name="donate_price_bread">1.99 $</string>
    <string name="donate_name_coffee">Coffee</string>
    <string name="donate_price_coffee">2.99 $</string>
    <string name="donate_name_hamburger">Hamburger</string>
    <string name="donate_price_hamburger">3.99 $</string>
    <string name="donate_name_pizza">Pizza</string>
    <string name="donate_price_pizza">9.99 $</string>
    <string name="coming_soon">Coming soon</string>
    <string name="remove_all_ads">remove all ads</string>
    <string name="intro1_title_enjoy">Enjoy</string>
    <string name="intro1_title_powerfull">Powerful</string>
    <string name="thank_you">Thank \nYou</string>
    <string name="thanks">Thank</string>
    <string name="you">You</string>
    <string name="donate_success">You\'ve donate us a gift</string>
    <string name="donate_success_give">To thank you, we give you:</string>
    <string name="donate_success_coins">100 coins</string>
    <string name="donate_success_remove_ads">Permanently remove ads</string>
    <string name="firebase_database_url">https://office-reader-d3bce.firebaseio.com</string>
    <string name="gcm_defaultSenderId">850249410431</string>
    <string name="google_api_key">AIzaSyBRkWQwqmWIJhEB9vGa9eWOby_Q15BVvsk</string>
    <string name="google_app_id">1:850249410431:android:3041ae5ccf0f9c2a461c4a</string>
    <string name="google_storage_bucket">office-reader-d3bce.appspot.com</string>
    <string name="common_google_play_services_unknown_issue">common_google_play_services_unknown_issue</string>
    <string name="sodk_certificate_common_name">Common Name (CN)</string>
    <string name="sodk_certificate_country">Country (C)</string>
    <string name="sodk_certificate_details">Certificate Details</string>
    <string name="sodk_certificate_email">Email</string>
    <string name="sodk_certificate_org">Organisation (O)</string>
    <string name="sodk_certificate_org_unit">Organizational Unit (OU)</string>
    <string name="sodk_certificate_sign">Sign</string>
    <string name="sodk_certificate_verify_title">Document Signature Verification</string>
    <string name="sodk_certificates">Available Certificates</string>
    <string name="sodk_editor_OK">OK</string>
    <string name="sodk_editor_accept_upper">ACCEPT</string>
    <string name="sodk_editor_author_upper">AUTHOR</string>
    <string name="sodk_editor_comment_upper">COMMENT</string>
    <string name="sodk_editor_delete_comment_upper">"DELETE
COMMENT"</string>
    <string name="sodk_editor_delete_upper">DELETE</string>
    <string name="sodk_editor_draw_upper">DRAW</string>
    <string name="sodk_editor_highlight_upper">HIGHLIGHT</string>
    <string name="sodk_editor_next_upper">NEXT</string>
    <string name="sodk_editor_note_upper">NOTE</string>
    <string name="sodk_editor_previous_upper">PREVIOUS</string>
    <string name="sodk_editor_redact_apply_upper">APPLY</string>
    <string name="sodk_editor_redact_mark_upper">MARK</string>
    <string name="sodk_editor_redact_remove_upper">REMOVE</string>
    <string name="sodk_editor_reject_upper">REJECT</string>
    <string name="sodk_editor_show_changes_upper">"SHOW
CHANGES"</string>
    <string name="sodk_editor_toggle_upper">TOGGLE</string>
    <string name="sodk_editor_track_changes_upper">"TRACK
CHANGES"</string>
    <string name="sodk_issued_to">Issued To</string>
    <string name="sodk_no_certificates">No certificates available - please contact your IT support</string>
</resources>