<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnl_dialog_location_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorWordSelectedBorder_2392FF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txv_dialog_internet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/dialog_enable_internet"
        android:textColor="@color/colorWhite_ffffff"
        android:textSize="24.0dip" />

    <TextView
        android:id="@+id/txv_dialog_internet_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_message_internet"
        android:layout_margin="@dimen/_5sdp"
        android:textColor="@color/colorGray_FFAEAFB1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginBottom="@dimen/_10sdp"
        >

        <TextView
            android:id="@+id/btn_dialog_internet_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/internet_cancel"
            android:textColor="@color/colorGray_FFAEAFB1"
            android:textAllCaps="true"
            />

        <TextView
            android:id="@+id/btn_dialog_internet_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/internet_try_again"
            android:textAllCaps="true"
            android:layout_marginEnd="24.0dip"
            android:textColor="@color/colorGray_FFAEAFB1"
            />
    </LinearLayout>
</LinearLayout>